feat: add alertAnalyzer API
